prometheus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.d3vops.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana-prometheus-stack
            port:
              number: 80
